--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "lucide-react": "^0.220.0",
+    "nanoid": "^4.0.2",
     "next": "13.4.3",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
