--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "next": "13.4.3",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.0",
