--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
+    "encoding": "^0.1.13",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "lucide-react": "^0.220.0",
