--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.0",
     "react-hot-toast": "^2.4.1",
+    "react-loading-skeleton": "^3.3.1",
     "react-textarea-autosize": "^8.5.2",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
